Add MathsKit logo: teal rounded square with white plus sign

--- a/index.html
+++ b/index.html
@@ -321,7 +321,11 @@
       return (
         <div className="min-h-screen bg-warm-white dark:bg-dark-bg p-4">
           <div className="max-w-md mx-auto pt-4">
-            <h1 className="text-2xl font-extrabold text-center text-dark-text dark:text-white mb-4">
+            <h1 className="text-2xl font-extrabold text-center text-dark-text dark:text-white mb-4 flex items-center justify-center gap-2">
+              <svg width="32" height="32" viewBox="0 0 32 32" fill="none" className="inline-block">
+                <rect x="2" y="2" width="28" height="28" rx="8" fill="#4ECDC4" />
+                <path d="M16 9V23M9 16H23" stroke="white" strokeWidth="3" strokeLinecap="round" />
+              </svg>
               MathsKit
             </h1>
 
